# api/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "title": "Portal Lonper API",
-    "version": "v1.0.0",
+    "version": "v0.0.1",
     "description": "Portal Lonper API documentation"
   },
   "servers": [
@@ -103,9 +103,225 @@
       }
     }
   },
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "Authentication related endpoints"
+    },
+    {
+      "name": "Addresses",
+      "description": "Address related endpoints"
+    }
+  ],
   "paths": {
-    "/api/v1/addresses/getAddresses": {
+    "/api/v2/auth/login": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Log in a user",
+        "description": "This endpoint allows a user to log in.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "description": "User's email address",
+                    "example": "lonper.dev@gmail.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "description": "User's password",
+                    "example": "admin2023"
+                  }
+                },
+                "required": ["email", "password"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "User logged in successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "description": "Success message"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Invalid credentials",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v2/auth/logout": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Log out a user",
+        "description": "This endpoint allows a user to log out.",
+        "responses": {
+          "200": {
+            "description": "User logged out successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "description": "Success message"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v2/auth/sendPasswordResetEmail": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Send a password reset email",
+        "description": "This endpoint allows sending a password reset email.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "description": "User's email address"
+                  }
+                },
+                "required": ["email"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Password reset email sent successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "description": "Success message"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v2/auth/getCurrentUser": {
       "get": {
+        "tags": ["Auth"],
+        "summary": "Get the current user",
+        "description": "This endpoint returns the current authenticated user.",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                      "type": "object",
+                      "description": "User data"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v2/addresses/getAddresses": {
+      "get": {
+        "tags": ["Addresses"],
         "summary": "Get all addresses",
         "description": "This endpoint returns a list of all stored addresses.",
         "responses": {
@@ -128,8 +344,9 @@
         }
       }
     },
-    "/api/v1/addresses/postAddress": {
+    "/api/v2/addresses/postAddress": {
       "post": {
+        "tags": ["Addresses"],
         "summary": "Create a new address",
         "description": "This endpoint allows creating a new address.",
         "requestBody": {
@@ -169,8 +386,9 @@
         }
       }
     },
-    "/api/v1/addresses/putAddress": {
+    "/api/v2/addresses/putAddress": {
       "put": {
+        "tags": ["Addresses"],
         "summary": "Update an existing address",
         "description": "This endpoint allows updating data for an existing address.",
         "requestBody": {
@@ -213,8 +431,9 @@
         }
       }
     },
-    "/api/v1/addresses/deleteAddress": {
+    "/api/v2/addresses/deleteAddress": {
       "delete": {
+        "tags": ["Addresses"],
         "summary": "Delete an address",
         "description": "This endpoint allows deleting an address using its ID.",
         "parameters": [
